--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,10 +1,12 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 50%;
+.container {
+  padding: 30px;
+  text-align: center;
 }
 
-.example-full-width {
-  width: 50%;
+.input-style {
+  width: 75%;
 }
-  
+
+.spacer {
+  flex: 1 1 auto;
+}
